--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,70 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms & Privacy - [Your App Name]</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        a {
+            color: blue;
+        }
+    </style>
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+
+    <h1>Terms and Conditions</h1>
+    <p>Last Updated: [Date]</p>
+
+    <h2>1. Introduction</h2>
+    <p>Welcome to <strong>[Your App Name]</strong> ("App"). By using this App, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree, please do not use the App.</p>
+
+    <h2>2. Use of the App</h2>
+    <ul>
+        <li>You must be at least 13 years old to use this App.</li>
+        <li>You agree not to use the App for any illegal activities.</li>
+        <li>The App integrates YouTube videos and complies with <a href="https://www.youtube.com/t/terms" target="_blank">YouTube Terms of Service</a>.</li>
+    </ul>
+
+    <h2>3. Content and Copyright</h2>
+    <p>The App displays YouTube videos using official YouTube APIs. We do not claim ownership of any YouTube content. You agree to comply with <a href="https://www.youtube.com/t/terms" target="_blank">YouTube’s Terms of Service</a>.</p>
+
+    <h2>4. Limitation of Liability</h2>
+    <p>The App is provided "as is" without any warranties. We are not responsible for any loss or damage related to your use of the App.</p>
+
+    <h1>Privacy Policy</h1>
+    <p>We value your privacy. This Privacy Policy explains how we collect, use, and protect your data.</p>
+
+    <h2>1. Data Collection</h2>
+    <p>We collect the following data:</p>
+    <ul>
+        <li>App usage data (analytics, performance tracking).</li>
+        <li>If linked with YouTube, we may access limited account information as per <a href="https://www.google.com/policies/privacy/" target="_blank">Google’s Privacy Policy</a>.</li>
+    </ul>
+
+    <h2>2. How We Use Your Data</h2>
+    <p>We use your data to improve the App experience and comply with YouTube’s policies.</p>
+
+    <h2>3. Third-Party Services</h2>
+    <p>Our App uses YouTube APIs. By using this App, you also agree to <a href="https://www.youtube.com/t/terms" target="_blank">YouTube’s Terms</a> and <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>.</p>
+
+    <h2>4. Data Security</h2>
+    <p>We implement security measures to protect your data. However, no system is 100% secure.</p>
+
+    <h2>5. Contact Us</h2>
+    <p>If you have any questions about our policies, contact us at <a href="mailto:support@yourapp.com">support@yourapp.com</a>.</p>
+
 </body>
 
 </html>
