pricecy policy update

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Privacy - [Your App Name]</title>
+    <title>Terms & Privacy - Yt Tools Seo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,10 +25,10 @@
 <body>
 
     <h1>Terms and Conditions</h1>
-    <p>Last Updated: [Date]</p>
+    <p>Last Updated: 09-02-2025</p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to <strong>[Your App Name]</strong> ("App"). By using this App, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree, please do not use the App.</p>
+    <p>Welcome to <strong>Yt Tools Seo</strong> ("App"). By using this App, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree, please do not use the App.</p>
 
     <h2>2. Use of the App</h2>
     <ul>
