--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Privacy - Yt Tools Seo</title>
+    <title>Terms & Privacy - YT Tools SEO</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -18,17 +17,20 @@
         }
         a {
             color: blue;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
-
 <body>
-
+    
     <h1>Terms and Conditions</h1>
-    <p>Last Updated: 09-02-2025</p>
+    <p><strong>Last Updated:</strong> 12-02-2025</p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to <strong>Yt Tools Seo</strong> ("App"). By using this App, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree, please do not use the App.</p>
+    <p>Welcome to <strong>YT Tools SEO</strong> ("App"). By using this App, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree, please do not use the App.</p>
 
     <h2>2. Use of the App</h2>
     <ul>
@@ -44,27 +46,39 @@
     <p>The App is provided "as is" without any warranties. We are not responsible for any loss or damage related to your use of the App.</p>
 
     <h1>Privacy Policy</h1>
-    <p>We value your privacy. This Privacy Policy explains how we collect, use, and protect your data.</p>
+    <p><strong>Last Updated:</strong> 12-02-2025</p>
 
     <h2>1. Data Collection</h2>
-    <p>We collect the following data:</p>
+    <p>We collect and process the following data:</p>
     <ul>
-        <li>App usage data (analytics, performance tracking).</li>
-        <li>If linked with YouTube, we may access limited account information as per <a href="https://www.google.com/policies/privacy/" target="_blank">Google’s Privacy Policy</a>.</li>
+        <li><strong>YouTube API Data:</strong> The app fetches public YouTube video information such as titles, thumbnails, and metadata using the <strong>YouTube API</strong>. We do not collect or store user credentials.</li>
+        <li><strong>AI-Generated Content:</strong> The app uses <strong>Gemini AI</strong> to generate video titles. These are suggestions and users can edit them manually.</li>
+        <li><strong>Earnings Estimation:</strong> The app provides estimated earnings based on public YouTube data.</li>
+        <li><strong>General Analytics & Performance Data:</strong> We collect anonymous data to improve app performance.</li>
     </ul>
 
     <h2>2. How We Use Your Data</h2>
-    <p>We use your data to improve the App experience and comply with YouTube’s policies.</p>
+    <p>We use the collected data to:</p>
+    <ul>
+        <li>Display video thumbnails, titles, and metadata.</li>
+        <li>Generate AI-based video title suggestions.</li>
+        <li>Provide estimated earnings based on public YouTube data.</li>
+        <li>Improve app functionality and user experience.</li>
+    </ul>
 
-    <h2>3. Third-Party Services</h2>
-    <p>Our App uses YouTube APIs. By using this App, you also agree to <a href="https://www.youtube.com/t/terms" target="_blank">YouTube’s Terms</a> and <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>.</p>
+    <h2>3. YouTube API Compliance</h2>
+    <p>This app follows <strong>YouTube's API Services Terms of Service</strong>. By using this app, you also agree to:</p>
+    <ul>
+        <li><a href="https://www.youtube.com/t/terms" target="_blank">YouTube Terms of Service</a></li>
+        <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
+    </ul>
+    <p>We do not allow YouTube data downloads or unauthorized access to private user information.</p>
 
     <h2>4. Data Security</h2>
-    <p>We implement security measures to protect your data. However, no system is 100% secure.</p>
+    <p>We take security seriously and do not sell, trade, or misuse user data. All YouTube API data is read-only and not stored permanently.</p>
 
     <h2>5. Contact Us</h2>
-    <p>If you have any questions about our policies, contact us at <a href="mailto:support@yourapp.com">support@yourapp.com</a>.</p>
+    <p>If you have any concerns or questions, email us at <a href="mailto:support@yourapp.com">support@yourapp.com</a>.</p>
 
 </body>
-
 </html>
