--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
             max-width: 800px;
             margin: 20px auto;
             padding: 20px;
+            color: #333;
         }
         h1, h2, h3 {
-            color: #333;
+            color: #222;
         }
         a {
             color: blue;
@@ -22,63 +23,80 @@
         a:hover {
             text-decoration: underline;
         }
+        ul {
+            padding-left: 20px;
+        }
     </style>
 </head>
 <body>
-    
-    <h1>Terms and Conditions</h1>
-    <p><strong>Last Updated:</strong> 12-02-2025</p>
+
+    <h1>Terms & Conditions</h1>
+    <p><strong>Last Updated:</strong> 13-Feb-2025</p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to <strong>YT Tools SEO</strong> ("App"). By using this App, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree, please do not use the App.</p>
+    <p>Welcome to <strong>YT Tools SEO</strong> ("App"). By using this App, you agree to abide by these Terms and Conditions and our Privacy Policy.</p>
+    <p>If you do not agree with any of these terms, please do not use the app.</p>
+    <p>This application complies with <strong>YouTube API Services Terms of Service</strong> and <strong>Google Play Store policies</strong>.</p>
 
     <h2>2. Use of the App</h2>
     <ul>
-        <li>You must be at least 13 years old to use this App.</li>
-        <li>You agree not to use the App for any illegal activities.</li>
-        <li>The App integrates YouTube videos and complies with <a href="https://www.youtube.com/t/terms" target="_blank">YouTube Terms of Service</a>.</li>
+        <li>You must be at least <strong>13 years old</strong> to use this App.</li>
+        <li>You <strong>cannot use</strong> this App for illegal activities or violations of <a href="https://www.youtube.com/t/terms" target="_blank">YouTube’s Terms of Service</a>.</li>
+        <li>The App integrates <strong>YouTube API Services</strong> and follows YouTube’s policies.</li>
+        <li>You are responsible for any actions performed using the App.</li>
     </ul>
 
-    <h2>3. Content and Copyright</h2>
-    <p>The App displays YouTube videos using official YouTube APIs. We do not claim ownership of any YouTube content. You agree to comply with <a href="https://www.youtube.com/t/terms" target="_blank">YouTube’s Terms of Service</a>.</p>
+    <h2>3. Content & Copyright</h2>
+    <ul>
+        <li>The App does <strong>not</strong> own any of the <strong>YouTube content</strong> it displays.</li>
+        <li>It retrieves <strong>video details, thumbnails, and metadata</strong> through official <strong>YouTube APIs</strong>.</li>
+        <li>You must comply with <a href="https://www.youtube.com/t/terms" target="_blank">YouTube’s Terms of Service</a> when using this App.</li>
+        <li>We do <strong>not</strong> allow <strong>downloading YouTube videos</strong> or violating YouTube’s API policies.</li>
+    </ul>
 
     <h2>4. Limitation of Liability</h2>
-    <p>The App is provided "as is" without any warranties. We are not responsible for any loss or damage related to your use of the App.</p>
+    <p>The App is provided "<strong>as is</strong>" with no warranties. We are not responsible for any loss, damage, or liability caused by the use of this App.</p>
 
     <h1>Privacy Policy</h1>
-    <p><strong>Last Updated:</strong> 12-02-2025</p>
+    <p><strong>Last Updated:</strong> 13-Feb-2025</p>
 
-    <h2>1. Data Collection</h2>
-    <p>We collect and process the following data:</p>
+    <h2>5. Data Collection & Usage</h2>
+    <p>This App <strong>does not</strong> collect, store, or share any <strong>personal data</strong> beyond what is explicitly provided by the user.</p>
+
+    <h3>We collect the following data:</h3>
     <ul>
-        <li><strong>YouTube API Data:</strong> The app fetches public YouTube video information such as titles, thumbnails, and metadata using the <strong>YouTube API</strong>. We do not collect or store user credentials.</li>
-        <li><strong>AI-Generated Content:</strong> The app uses <strong>Gemini AI</strong> to generate video titles. These are suggestions and users can edit them manually.</li>
-        <li><strong>Earnings Estimation:</strong> The app provides estimated earnings based on public YouTube data.</li>
-        <li><strong>General Analytics & Performance Data:</strong> We collect anonymous data to improve app performance.</li>
+        <li><strong>YouTube API Data:</strong> The App fetches public YouTube data (video titles, thumbnails, metadata) using the <strong>YouTube API</strong>.</li>
+        <li><strong>Username (Optional):</strong> If the user chooses to enter a **username** in their profile, it is stored within the app for personalization purposes only. We do <strong>not</strong> share or misuse this data.</li>
+        <li><strong>Earnings Estimation:</strong> The App estimates potential YouTube earnings based on public data.</li>
+        <li><strong>Analytics & Performance Data:</strong> We collect anonymous usage data to improve the App.</li>
     </ul>
 
-    <h2>2. How We Use Your Data</h2>
-    <p>We use the collected data to:</p>
-    <ul>
-        <li>Display video thumbnails, titles, and metadata.</li>
-        <li>Generate AI-based video title suggestions.</li>
-        <li>Provide estimated earnings based on public YouTube data.</li>
-        <li>Improve app functionality and user experience.</li>
-    </ul>
-
-    <h2>3. YouTube API Compliance</h2>
-    <p>This app follows <strong>YouTube's API Services Terms of Service</strong>. By using this app, you also agree to:</p>
+    <h2>6. Compliance with YouTube API Services</h2>
+    <p>This App follows <strong>YouTube API Services Terms of Service</strong>. By using this App, you agree to:</p>
     <ul>
         <li><a href="https://www.youtube.com/t/terms" target="_blank">YouTube Terms of Service</a></li>
         <li><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></li>
     </ul>
-    <p>We do not allow YouTube data downloads or unauthorized access to private user information.</p>
+    <p>🔹 <strong>We do not collect, store, or access private user data beyond the optional username.</strong></p>
+    <p>🔹 <strong>We do not allow downloading of YouTube content.</strong></p>
+    <p>🔹 <strong>All YouTube data is read-only and is NOT permanently stored.</strong></p>
 
-    <h2>4. Data Security</h2>
-    <p>We take security seriously and do not sell, trade, or misuse user data. All YouTube API data is read-only and not stored permanently.</p>
+    <h2>7. User Data Security</h2>
+    <ul>
+        <li>The App <strong>does not</strong> store any YouTube user credentials.</li>
+        <li>We <strong>do not</strong> sell, trade, or misuse user data.</li>
+        <li>The optional username stored is only for personalization and is <strong>not shared</strong> with third parties.</li>
+    </ul>
 
-    <h2>5. Contact Us</h2>
-    <p>If you have any concerns or questions, email us at <a href="mailto:support@yourapp.com">support@yourapp.com</a>.</p>
+    <h2>8. Third-Party Services</h2>
+    <p>The App integrates with YouTube API and follows YouTube's <strong>official API policies</strong>. It may include links to third-party sites (YouTube, Google, etc.), but we <strong>do not control</strong> those sites.</p>
+
+    <h2>9. Updates & Changes</h2>
+    <p>We reserve the right to update this <strong>Privacy Policy & Terms of Service</strong> at any time. Users will be notified of any significant changes.</p>
+
+    <h2>10. Contact Us</h2>
+    <p>If you have any questions or concerns about this policy, please contact us at:</p>
+    <p>📧 <strong>Email:</strong> <a href="mailto:support@yttoolsseo.com">support@yttoolsseo.com</a></p>
 
 </body>
 </html>
